[gd_scene load_steps=3 format=3 uid="uid://de5x4r7qbv6uk"]

[ext_resource type="Script" path="res://src/UI/Components/input_with_drop_down.gd" id="1_5n26m"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_qjk6b"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.101961, 0.101961, 0.101961, 1)
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[node name="InputWithDropDown" type="LineEdit"]
offset_right = 271.0
offset_bottom = 31.0
script = ExtResource("1_5n26m")

[node name="CanvasLayer" type="CanvasLayer" parent="."]
visible = false

[node name="ItemList" type="ItemList" parent="CanvasLayer"]
offset_top = 31.0
offset_right = 271.0
offset_bottom = 225.0
theme_override_font_sizes/font_size = 12
theme_override_styles/panel = SubResource("StyleBoxFlat_qjk6b")

[connection signal="gui_input" from="." to="." method="_on_gui_input"]
[connection signal="text_changed" from="." to="." method="_on_text_changed"]
[connection signal="item_selected" from="CanvasLayer/ItemList" to="." method="_on_item_list_item_selected"]
